--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
+/* You ca@import '~bootstrap/dist/css/bootstrap.css';n add global styles to this file, and also import other style files */
